--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -17,10 +17,18 @@ body {
     font-size: 1rem;
     line-height: 1.58;
     color: #333;
-    background-color: #f4f4f4;
+    background: url('../images/cool-background.png') no-repeat center center fixed;
+    background-size: cover;
     height: 100%;
 }
 
+.exit-button{
+    position: absolute;
+    background-color: black;
+    color: white;
+    top: 20px;
+    right: 20px;
+}
 .clearfix:after {
     display: block;
     content: "";
@@ -98,7 +106,8 @@ button.accent {
 }
 
 .username-page-container {
-    background: #fff;
+    background: black;
+    color: white;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
     border-radius: 2px;
     width: 100%;
@@ -119,6 +128,8 @@ button.accent {
 
 .username-page-container .username-submit {
     margin-top: 10px;
+    background: url('../images/cool-background.png') no-repeat center center fixed;
+    background-size: cover;
 }
 
 
@@ -129,9 +140,10 @@ button.accent {
 
 .chat-container {
     max-width: 700px;
+    color: white;
     margin-left: auto;
     margin-right: auto;
-    background-color: #fff;
+    background-color: black;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
     margin-top: 30px;
     height: calc(100% - 60px);
@@ -223,6 +235,8 @@ button.accent {
     text-align: center;
     padding: 15px;
     border-bottom: 1px solid #ececec;
+    background-color: black;
+    color: white;
 }
 
 .chat-header h2 {
