Add pdf generator class

--- a/src/main/resources/templates/pdf.html
+++ b/src/main/resources/templates/pdf.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,20 +53,13 @@
         <tr>
             <th>ID</th>
             <th>Nazwa</th>
-            <th>Wartość</th>
         </tr>
         </thead>
         <tbody>
         <!-- Tutaj wstaw wiersze tabeli z danymi -->
         <tr>
-            <td>1</td>
-            <td>Dane 1</td>
-            <td>100</td>
         </tr>
         <tr>
-            <td>2</td>
-            <td>Dane 2</td>
-            <td>200</td>
         </tr>
         </tbody>
     </table>
