--- a/src/main/resources/templates/pdf.html
+++ b/src/main/resources/templates/pdf.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:font-style="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <style>
         body {
             font-family: Arial, sans-serif;
-        }
-
-        header, footer {
-            text-align: center;
-            padding: 1em 0;
+            margin: 0;
+            padding: 0;
         }
 
         h1, h2 {
-            color: #333;
+            margin: 0;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
         }
 
         table, th, td {
@@ -34,38 +32,71 @@
             background-color: #f2f2f2;
         }
 
+        .logo {
+            width: 50px;
+            height: 50px;
+            vertical-align: middle;
+        }
     </style>
-    <link rel="stylesheet" href="pdf.css" type="text/css" />
-    <title>Raport PDF</title>
 </head>
 <body>
-<header>
-    <h1>Raport danych</h1>
-</header>
 <section>
-    <h2>Podsumowanie</h2>
-    <p>Tutaj wprowadź podsumowanie swojego raportu...</p>
+    <p style="background-color: #4CAF50;
+        color: white;
+        padding: 10px 0;
+        text-align: center;
+        margin-top: -10px;
+        font-size: 30px;"
+    >
+        <img src="../static/images/icon.png" alt="Company Logo" class="logo"/>
+        Instructors report
+    </p>
+    <h2 style="text-align: center">Summary Invoice</h2>
+    <h3>Dear Valued Customer</h3>
+      <p>  This document serves as a formal invoice for services rendered or products
+        provided during the specified billing period. Enclosed, you will find a detailed
+        breakdown of the transactions that have occurred, including the invoice number,
+        date of transaction, the total amount due, as well as a comprehensive summary
+          of the products or services for which the charges have been levied.</p>
+    <p style="font-weight: bold;">Client: <!--{customerFirstname}--> <!--{customerLastname}--></p>
 </section>
 <section>
-    <h2>Szczegółowe dane</h2>
+    <h2>Detailed Data</h2>
     <table>
         <thead>
         <tr>
-            <th>ID</th>
-            <th>Nazwa</th>
+            <th>Invoice number</th>
+            <th>Date</th>
+            <th>Amount</th>
         </tr>
         </thead>
         <tbody>
-        <!-- Tutaj wstaw wiersze tabeli z danymi -->
+        <!--{faktury}-->
         <tr>
-        </tr>
-        <tr>
+            <td colspan="2" style="text-align: right;"><strong>Total:</strong></td>
+            <td><!--{totalAmount}-->$</td>
         </tr>
         </tbody>
     </table>
+    <p>Report generated on: <!--{date}--></p>
+    <p>Thank you for your prompt attention to this invoice, and we appreciate your
+        continued business and trust in our services/products.</p>
+    <p style="font-weight: bold;">Warm regards,<br />
+
+        Spring Instructor Team<br />
+    </p>
 </section>
-<footer>
-    <p>Raport wygenerowany dnia: [data]</p>
-</footer>
+<section>
+    <p style="background-color: #333;
+            color: white;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            padding: 10px 0;"
+    >
+        Contact us: info@company.com | Phone: +48 123 456 789
+    </p>
+</section>
 </body>
 </html>
